***********************************************************************
* This file records the changes made to this directory                */
***********************************************************************
 
02/07/01    Version 1.5.0R1
02/13/01    version 1.5.0R2 
            - modify the matrixLoadComplete function to output matrix
              to a file even when it has been previously assembled
              (per Tim Dunn's request)
02/14/01    version 1.5.0R3 
            - correct an error in MPI_Allreduce in buildSchurRHS.
            - take out a duplicate destroy(f1) in buildSchurRHS
            - in matrixLoadComplete, change to print original matrix
